data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_922.wast
;; 3. **Test Case**: Design a loop that makes use of a function returning values that are immediately used within subsequent iterations of the loop.    - **Constraint Check**: Validate correct handling of return values within loop iterations.    - **Improper Function Call or Return Handling**: Improper handling of return values affecting subsequent loop iterations.

(assert_invalid
  (module
    (func (result i32)
      (loop (result i32)
        (call 0)
        (br 1)
      )
    )
    (func (result i32)
      (i32.const 42)
    )
  )
  "type mismatch"
)